src/golden/functions/typeerrors/test.golden/msgerrors.fl
	struct Foo
	
	method meth
		<- "hello"
		<- Foo
		<- [42]